Fixed Card Styling (Icon align, Padding, Border)

--- a/src/components/index/styles/why-netlogo.css
+++ b/src/components/index/styles/why-netlogo.css
@@ -1,91 +1,85 @@
 .why-netlogo-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.for-tab {
-	border-radius: 1rem;
-	border: 1px solid var(--Light-1, #FAFAFC);
-	box-shadow: 0px 20px 20px -15px rgba(143, 144, 166, 0.25); 
-	padding: 0.66rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .for-tab-inner {
-	border-radius: 0.75rem;
-	background: var(--Light-1, #FAFAFC);
-	padding: 1.5rem 0.94rem;
+  border-radius: 1rem;
+  background: var(--Light-1, #fafafc);
+  padding: 1.3rem 1.3rem;
 }
 
 .for-tab-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 3.5rem;
-    background: var(--Light-3, #EBEBF0);
-    width: 4rem;
-    aspect-ratio: 1/1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3.5rem;
+  background: var(--Light-3, #ebebf0);
+  width: 4rem;
+  aspect-ratio: 1/1;
 }
 
-
 .for-tab-icon-image {
-    position: absolute;
-    width: 2.1rem;
+  position: absolute;
+  width: 2.1rem;
 }
 
 .for-tab-title-cont {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 0.88rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.88rem;
+  
 }
 
 .for-tab-content {
-    display: flex;
-    width: 18.125rem;
-    height: 16.125rem;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1.25rem;
+  display: flex;
+  width: 18.3rem;
+  height: 12.125rem;
+  flex-direction: column;
+  justify-content: top;
+  gap: 1.25rem;
+  text-align: left;
 }
 
 .for-tab-title {
-	color: var(--Dark-2, #555770);
-    /* txt/title */
-    font-family: Inter;
-    font-size: 1.125rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 150%; /* 1.6875rem */
+  color: var(--Dark-2, #555770);
+  /* txt/title */
+  font-family: Inter;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 1.6875rem */
 }
 
 .for-tab-text {
-    color: var(--Dark-1, #28293D);
-    /* txt/small/rg */
-    font-family: Inter;
-    font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 1.3125rem */
+  color: var(--Dark-1, #28293d);
+  /* txt/small/rg */
+  font-family: Inter;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 1.3125rem */
 }
 
 .learn-more-button {
-    border: none;
-    cursor: pointer;
-    display: flex;
-    padding: 0.875rem 2rem;
-    align-items: center;
-    border-radius: 0.375rem;
-    background: var(--Secondary-color, #0670ED);
-    color: var(--White, #FFF);
-    text-align: center;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Inter;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 150%; /* 1.5rem */
-    letter-spacing: 0.02rem;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  padding: 0.875rem 2rem;
+  align-items: center;
+  border-radius: 0.375rem;
+  background: var(--Secondary-color, #0670ed);
+  color: var(--White, #fff);
+  text-align: center;
+  font-feature-settings:
+    "clig" off,
+    "liga" off;
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%; /* 1.5rem */
+  letter-spacing: 0.02rem;
 }
